@@ -1,3 +1,7 @@
+2008-02-28  Benny Malengier <benny.malengier@gramps-project.org>
+	* src/plugins/DefaultGramplets.py: improve (??) Pedigree Gramplet
+	* src/DataViews/GrampletView.py: add a no-wrap method
+
 2008-02-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/DefaultGramplets.py: new Pedigree Gramplet
 	* src/DataViews/GrampletView.py: added help button on undocked windows
